update contest images

--- a/public/index.html
+++ b/public/index.html
@@ -432,21 +432,21 @@
 									<div class="row">
 										<div class="col-md-12">
 											<h3>Pre-Dai Hoi Contests</h3>
-											<h5>Feel free to start working on a submission for the following contests, but hold off on submitting them until further notice. If you are interested in the video competition, please contact Tr. Khang Pham. Thanks!</h5>
+											<!--<h5>Feel free to start working on a submission for the following contests, but hold off on submitting them until further notice. If you are interested in the video competition, please contact Tr. Khang Pham. Thanks!</h5>-->
 										</div>
 									</div>
 
 									<div class="row">
 										<div class="col-md-6">
 											<figure class="figure textfromleft">
-												<img src="images/LogoFlyer.jpg" alt="DesignContest" class="img-responsive">
+												<img src="images/LogoFlyerFinal.jpg" alt="DesignContest" class="img-responsive">
 												<figcaption class="figure-caption">Logo Design Contest</figcaption>
 											</figure>
 											<br>
 										</div>
 										<div class="col-md-6">
 											<figure class="figure textfromright">
-												<img src="images/Video-CollageFlyer.jpg" alt="VideoContest" class="img-responsive">
+												<img src="images/VideoFlyerFinal.jpg" alt="VideoContest" class="img-responsive">
 												<figcaption class="figure-caption">Video Contest</figcaption>
 											</figure>
 											<br>
