remove mothers day date

--- a/public/index.html
+++ b/public/index.html
@@ -159,7 +159,7 @@
 													<br>• June 2, June 9, June 16, June 23
 													<br><br>
 													• Journey with Jesus: Sundays 1pm-4pm
-													<br>• May 14, May 21, May 28
+													<br>• May 21, May 28
 													<br>• June 4, June 11, June 18, June 25
 												</div>
 												<!--<img class="img-responsive" src="images/DHNHflyer.jpg">-->
@@ -412,7 +412,7 @@
 												<br>• June 2, June 9, June 16, June 23
 												<br><br>
 												• Journey with Jesus: Sundays 1pm-4pm
-												<br>• May 14, May 21, May 28
+												<br>• May 21, May 28
 												<br>• June 4, June 11, June 18, June 25
 
 											</div>
