modern to religious

--- a/public/index.html
+++ b/public/index.html
@@ -242,8 +242,8 @@
 															<li>• quê hương</li>
 														</ul>-->
 													</li>
-													<li>Saturday: Đồng hành với Chúa </li>
-													<li>• Open to interpretation ("modern")</li>
+													<li>Saturday: Đồng hành với Chúa (Religious)</li>
+													<li>• Open to interpretation</li>
 												</ul>
 												
 												<br>
