update for new year

--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
 									<div class="row">
 										<div class="col-md-4">
 											<h2><u>Announcements</u></h2>
-											<!--Please enroll in the Remind group to receive important announcements!-->
+											Please enroll in the Remind group to receive important announcements!
 											<!--<br><br>-->
 
 											<div class="textfromleft">
@@ -125,21 +125,13 @@
 											<h2><u>Upcoming Events</u></h2>
 											<div class="textfromright">
 
-												<!--<img src="images/funrunlogo.jpg" class="img-responsive" alt="Don Bosco Fun Run">
-												<br>Come out as we gather the church community in a fun day of running and raising money to support a good cause!
-												<br>• Time: April 29, 1pm - 4pm
-												<br>• Location: Copperfield Elementary School Track
-												<br>• Registration Fee: $5
-												<br>• All proceeds will go to Dong Men Thanh Gia -Ben Tre- Vietnam
-												<br>• Help orphans and the elderly
-												<br>• More info to come
-												<h5>What do I need to do to participate?</h5>
-												• Get sponsors (friends, family, neighbors, teachers, etc) to pledge
-												<br>• For each lap range you achieve, your sponsors will donate to the cause
-												<h4><a href="/FunRunForm" target="_blank">Click here to download the form</a></h4>
-												
 												<br>
-												<br>-->
+												<h4>NS/HS Retreat</h4>
+												• Time: Friday October 20, 6pm
+												<br>• Location: Church
+												<br>• More info to come												
+
+												<br>
 												<br>
 												<!-- <h4><u>Đại Hội Nghĩa Hiệp</u></h4>
 												<br>•Details <a href="#DHNHPanelLink">below</a>
