--- a/public/index.html
+++ b/public/index.html
@@ -74,8 +74,10 @@
 									<div class="row">
 										<div class="col-md-4">
 											<h2><u>Announcements</u></h2>
-											Please enroll in the Remind group to receive important announcements!
-											<!--<br><br>-->
+											Please enroll in the Remind group (@dfd7c) to receive important announcements!
+											<br><br>
+
+											<a href="/teamlist" target="_blank">Team List</a>
 
 											<div class="textfromleft">
 												<!-- <h5>•Final Project:: Each team come up with a 2 minute presentation about your favorite TNTT memory</h5>
