--- a/public/index.html
+++ b/public/index.html
@@ -130,9 +130,15 @@
 												<h4>NS/HS Retreat</h4>
 												• Time: Friday October 20, 6pm
 												<br>• Location: Church
-												<br>• More info to come												
+												<br>• Theme: One Heart, Many Beats
 
 												<br>
+												<br>
+												<h4>Celebration of Our Lady of Fatima</h4>
+												• Time: Friday, October 13, 7pm
+												<br>• Location: Church
+												<br>• Come in uniform
+
 												<br>
 												<!-- <h4><u>Đại Hội Nghĩa Hiệp</u></h4>
 												<br>•Details <a href="#DHNHPanelLink">below</a>
