consentform for retreat

--- a/public/index.html
+++ b/public/index.html
@@ -114,10 +114,10 @@
 												<br>April: <b>Toma</b> -->
 												<br>
 												<font size="-1">
-												<br><b>Attendance:</b> Up to <b>20 points</b> each Sunday
-												<br><b>Participation:</b> Up to <b>15 points</b> each Sunday
+												<!-- <br><b>Attendance:</b> Up to <b>20 points</b> each Sunday
+												<br><b>Participation:</b> Up to <b>15 points</b> each Sunday -->
 												<br><b>BHT:</b> Up to <b>21 pts</b> per week (Each day: 1-3 members: 1 pt, 4-5 members: 2 pts, 6 or more members: 3 pts)
-												<br><b>Other Opportunities:</b> Will be announced
+												<!--<br><b>Other Opportunities:</b> Will be announced -->
 												</font>
 											</div>
 
@@ -131,14 +131,11 @@
 												• Time: Friday October 20, 6pm
 												<br>• Location: Church
 												<br>• Theme: One Heart, Many Beats
+												<br>• <a href="/consentForm" target="_blank">Consent Form</a> 
+												<br>• Bring $10 if you ordered a t-shirt
 
 												<br>
 												<br>
-												<h4>Celebration of Our Lady of Fatima</h4>
-												• Time: Friday, October 13, 7pm
-												<br>• Location: Church
-												<br>• Come in uniform
-
 												<br>
 												<!-- <h4><u>Đại Hội Nghĩa Hiệp</u></h4>
 												<br>•Details <a href="#DHNHPanelLink">below</a>
