tell to go to new site

--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,9 @@
 									<div class="row">
 										<div class="col-md-4">
 											<h2><u>Announcements</u></h2>
-											Please enroll in the Remind group (@dfd7c) to receive important announcements!
+											Go to the <a href="https://hiepsiaustin.ga"> NEW SITE</a>
+											<br>
+											Existing team points will be migrated over soon.
 											<br><br>
 
 
@@ -126,13 +128,13 @@
 											<h2><u>Upcoming Events</u></h2>
 											<div class="textfromright">
 
-												<br>
+<!-- 												<br>
 												<h4>NS/HS Retreat</h4>
 												• Time: Friday October 20, 6pm
 												<br>• Location: Church
 												<br>• Theme: One Heart, Many Beats
 												<br>• <a href="/consentForm" target="_blank">Consent Form</a> 
-												<br>• Bring $10 if you ordered a t-shirt
+												<br>• Bring $10 if you ordered a t-shirt -->
 
 												<br>
 												<br>
